--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^2.2.0
+  firebase_core: ^1.2.0
+  shared_preferences: ^2.0.6
+  path_provider: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  google_fonts: ^0.3.5
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
